--- a/src/MimeTypes/project.json
+++ b/src/MimeTypes/project.json
@@ -1,5 +1,5 @@
 {
-	"version": "2.3.1",
+	"version": "3.0.0",
 	"title": "Media Type Map",
 	"description": "A simple lookup from file name/extension to MIME/media type, generated from Apache's mime.types.",
 	"authors": [ "alexr" ],
@@ -13,15 +13,16 @@
 		}
 	},
 
-	"dependencies": {
-		"Microsoft.NETCore.App": {
-			"type": "platform",
-			"version": "1.0.0-rc2-3002702"
-		}
-	},
+	"dependencies": { },
 
 	"frameworks": {
-		"netstandard1.0": {
+		"netcoreapp1.0": {
+			"dependencies": {
+				"Microsoft.NETCore.App": {
+				"type": "platform",
+				"version": "1.0.0"
+				}
+			},
 			"imports": [
 				"dnxcore50",
 				"portable-net451+win8+win81+win10"
